# mef3io

./: .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  METADATA.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump-version.yml  ci.yml  docs.yml  release.yml  wheels.yml
benchmarks/: README.md  bindings_benchmark.py  compression_test.py  mef_benchmark.py
bindings/python/: mef3io_ext.cpp
core/: CMakeLists.txt
core/include/mef3io/: c_api.h  crypto.hpp  parallel.hpp  reader.hpp  records.hpp  red.hpp  session.hpp  session_writer.hpp  source.hpp  tar.hpp  version.hpp  writer.hpp
core/src/: c_api.cpp  metadata.cpp  reader.cpp  records.cpp  red.cpp  session.cpp  session_writer.cpp  source.cpp  tar.cpp  writer.cpp
core/tests/: test_core.cpp  test_tar.cpp
docs/: Doxyfile  cpp.md  design.md  encryption_model.md  examples.md  index.md  install.md  legacy_comparison.md  matlab.md  mef3_format.md  mef3io_readme.md  metadata.md  python.md  releasing.md
docs/api/: cpp.md  matlab.md  python.md
docs/api/cpp/html/: index.html
docs/for_agents/: mef3io_handoff.md
examples/: 01_write_and_read.py  02_int32_primitive.py  03_appending.py  04_segment_map.py  05_annotations.py  06_encryption.py  07_legacy_mef_tools_style.py  08_legacy_compatability.py  08_legacy_compatibility.py  09_encryption_replicability.py  10_tar_archive.py  README.md
for_agents/: mef3io_handoff.md
matlab/: README.md  benchmark_mef3io.m  build_mex.m  mef3io_mex.cpp  test_api_parity.m  test_mef3io.m
matlab/+mef3io/: Acquisition.m  Metadata.m  Reader.m  Subject.m  Writer.m  archiveSession.m  extractSession.m
python/mef3io/: __init__.py  _archive.py  _reader.py  _writer.py  cache.py  compat.py  metadata.py
python/mef3io/pure/: __init__.py
scripts/: dev_build.sh  export_mef3io.sh
tests/: conftest.py  generate_golden.py  test_p10_metadata.py  test_p11_tar.py  test_p1_headers.py  test_p2_read.py  test_p3_reader.py  test_p4_write.py  test_p5_write.py  test_p6_threads.py  test_p7_compat_cache.py  test_p8_append.py  test_p9_robustness.py
tests/golden/: enc_both.npz  fractional_fs.npz  manifest.json  multi_channel.npz  multi_segment.npz  nan_gap_long.npz  nan_gap_short.npz  plain_single.npz  with_annotations.npz
tests/golden/enc_both.mefd/ch1.timd/ch1-000000.segd/: ch1-000000.tdat  ch1-000000.tidx  ch1-000000.tmet
tests/golden/fractional_fs.mefd/ch1.timd/ch1-000000.segd/: ch1-000000.tdat  ch1-000000.tidx  ch1-000000.tmet
tests/golden/multi_channel.mefd/ch1.timd/ch1-000000.segd/: ch1-000000.tdat  ch1-000000.tidx  ch1-000000.tmet
tests/golden/multi_channel.mefd/ch2.timd/ch2-000000.segd/: ch2-000000.tdat  ch2-000000.tidx  ch2-000000.tmet
tests/golden/multi_segment.mefd/ch1.timd/ch1-000000.segd/: ch1-000000.tdat  ch1-000000.tidx  ch1-000000.tmet
tests/golden/multi_segment.mefd/ch1.timd/ch1-000001.segd/: ch1-000001.tdat  ch1-000001.tidx  ch1-000001.tmet
tests/golden/nan_gap_long.mefd/ch1.timd/ch1-000000.segd/: ch1-000000.tdat  ch1-000000.tidx  ch1-000000.tmet
tests/golden/nan_gap_short.mefd/ch1.timd/ch1-000000.segd/: ch1-000000.tdat  ch1-000000.tidx  ch1-000000.tmet
tests/golden/plain_single.mefd/ch1.timd/ch1-000000.segd/: ch1-000000.tdat  ch1-000000.tidx  ch1-000000.tmet
tests/golden/with_annotations.mefd/ch1.timd/: ch1.rdat  ch1.ridx
tests/golden/with_annotations.mefd/ch1.timd/ch1-000000.segd/: ch1-000000.tdat  ch1-000000.tidx  ch1-000000.tmet
