[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mef3io"
version = "0.1.0.dev0"
description = "MEF 3.0 read/write — C++ core with Python bindings, pure-Python fallback"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mayo Clinic — BNEL" }]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
pure = ["numba"]
compat = ["pandas"]
# The legacy `mef-tools` (PyPI; import name `mef_tools`, pulls in pymef) is the
# correctness oracle and benchmark baseline. Installing it makes the suite and
# benchmarks run standalone (no local mef_tools checkout needed).
test = ["pytest", "pandas", "pymef", "mef-tools"]
# Everything the benchmarks compare against: legacy MEF stack + NWB-Zarr.
bench = ["pymef", "mef-tools", "pandas", "pynwb", "hdmf-zarr", "zarr", "numcodecs"]

[tool.scikit-build]
# The importable package lives in python/mef3io; the compiled _mef3io lands
# beside it via the CMake install rule.
wheel.packages = ["python/mef3io"]
minimum-version = "0.9"
build-dir = "build/skbuild/{wheel_tag}"
cmake.version = ">=3.26"

[tool.scikit-build.cmake.define]
MEF3IO_BUILD_TESTS = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests", "python/mef3io"]

[tool.cibuildwheel]
# CPython 3.10+ on the three desktop platforms; skip musl/32-bit for now.
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux* *_i686 *-win32"
build-frontend = "build"
test-requires = ["pytest", "numpy"]
# Golden-file tests need the legacy stack (pymef); run the codec/self tests that
# don't require it in the wheel smoke test.
test-command = "python -c \"import mef3io, numpy as np; print(mef3io.have_cpp_backend())\""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
