[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mef3io"
dynamic = ["version"]
description = "MEF 3.0 read/write — one C++ core with Python bindings (MATLAB via MEX)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mayo Clinic — BNEL" }]
dependencies = ["numpy>=1.23"]

[project.urls]
Homepage = "https://bnelair.github.io/mef3io/"
Documentation = "https://bnelair.github.io/mef3io/"
Repository = "https://github.com/bnelair/mef3io"
Issues = "https://github.com/bnelair/mef3io/issues"

[project.optional-dependencies]
compat = ["pandas"]
# The legacy `mef-tools` (PyPI; import name `mef_tools`, pulls in pymef) is the
# correctness oracle and benchmark baseline. Installing it makes the suite and
# benchmarks run standalone (no local mef_tools checkout needed).
test = ["pytest", "pandas", "pymef", "mef-tools"]
# Everything the benchmarks compare against: legacy MEF stack + NWB-Zarr.
bench = ["pymef", "mef-tools", "pandas", "pynwb", "hdmf-zarr", "zarr", "numcodecs"]

[tool.scikit-build]
# The importable package lives in python/mef3io; the compiled _mef3io lands
# beside it via the CMake install rule.
wheel.packages = ["python/mef3io"]
minimum-version = "0.9"
build-dir = "build/skbuild/{wheel_tag}"
cmake.version = ">=3.26"
# Single source of truth for the version: the repo-root VERSION file (also
# read by CMake for the C++ core and baked into the extension).
sdist.include = ["VERSION"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "^(?P<value>.+?)\\s*$"

[tool.scikit-build.cmake.define]
MEF3IO_BUILD_TESTS = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests", "python/mef3io"]

[tool.cibuildwheel]
# CPython 3.10+ on the three desktop platforms; skip musl/32-bit for now.
# Architectures come from the runner (native builds — the release workflow
# runs one job per os/arch: linux x86_64 + aarch64, windows AMD64 + ARM64),
# except macOS where one arm64 runner builds both architectures.
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
# cp314t (free-threaded) excluded until the extension is audited for it.
skip = "*-musllinux* *_i686 *-win32 cp314t-*"
archs = ["auto64"]
build-frontend = "build"
test-requires = ["pytest", "numpy"]
# Golden-file tests need the legacy stack (pymef); run the codec/self tests that
# don't require it in the wheel smoke test.
test-command = "python -c \"import mef3io, numpy as np; print(mef3io.__version__, mef3io.have_cpp_backend())\""

[tool.cibuildwheel.macos]
archs = ["arm64", "x86_64"]
# nanobind needs >=10.13 and the core's std::filesystem >=10.15; the default
# x86_64 target (10.9) fails the build.
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
